# ROCm-OpenCL-Runtime

./: .gitattributes  .gitignore  CMakeLists.txt  License  README.md  init.txt  licence  opencl-backward-compat.cmake  opencl.xml
DEB/: postinst
amdocl/: CMakeLists.txt  amdocl.def  amdocl.def.in  amdocl.map  amdocl.rc  amdocl.rc.in  cl_agent_amd.h  cl_command.cpp  cl_common.hpp  cl_context.cpp  cl_counter.cpp  cl_d3d10.cpp  cl_d3d10_amd.hpp  cl_d3d11.cpp  cl_d3d11_amd.hpp  cl_d3d9.cpp  cl_d3d9_amd.hpp  cl_debugger_amd.cpp  cl_debugger_amd.h  cl_device.cpp  cl_event.cpp  cl_execute.cpp  cl_gl.cpp  cl_gl_amd.hpp  cl_icd.cpp  cl_kernel.h  cl_kernel_info_amd.cpp  cl_kernel_info_amd.h  cl_lqdflash_amd.cpp  cl_lqdflash_amd.h  cl_memobj.cpp  cl_object.cpp  cl_p2p_amd.cpp  cl_p2p_amd.h  cl_pipe.cpp  cl_platform_amd.cpp  cl_platform_amd.h  cl_profile_amd.cpp  cl_profile_amd.h  cl_program.cpp  (+11 more)
amdocl/cmake/: FindROCclr.cmake
api/opencl/amdocl/: CMakeLists.txt  amdocl.def.in  amdocl.map  amdocl.map.in  amdocl.rc  cl_agent_amd.h  cl_command.cpp  cl_common.hpp  cl_context.cpp  cl_counter.cpp  cl_d3d10.cpp  cl_d3d10_amd.hpp  cl_d3d11.cpp  cl_d3d11_amd.hpp  cl_d3d9.cpp  cl_d3d9_amd.hpp  cl_debugger_amd.cpp  cl_debugger_amd.h  cl_device.cpp  cl_event.cpp  cl_execute.cpp  cl_gl.cpp  cl_gl_amd.hpp  cl_icd.cpp  cl_icd_amd.h  cl_kernel.h  cl_kernel_info_amd.cpp  cl_kernel_info_amd.h  cl_lqdflash_amd.cpp  cl_lqdflash_amd.h  cl_memobj.cpp  cl_object.cpp  cl_open_video.cpp  cl_open_video_amd.h  cl_p2p_amd.cpp  cl_p2p_amd.h  cl_pipe.cpp  cl_platform_amd.cpp  cl_platform_amd.h  cl_profile_amd.cpp  (+11 more)
packaging/: CMakeLists.txt  rocm-ocl-icd.postinst  rocm-ocl-icd.prerm  rocm-ocl-icd.rpm_post  rocm-ocl-icd.rpm_postun  rocm-ocl-icd.txt  rocm-opencl-dev.txt  rocm-opencl.postinst  rocm-opencl.prerm  rocm-opencl.rpm_post  rocm-opencl.rpm_postun  rocm-opencl.txt
runtime/: CMakeLists.txt  mainpage.dox  opencl.doxyfile  top.hpp
runtime/device/: appprofile.cpp  appprofile.hpp  blit.cpp  blit.hpp  blitcl.cpp  comgrctx.cpp  comgrctx.hpp  device.cpp  device.hpp  devkernel.cpp  devkernel.hpp  devprogram.cpp  devprogram.hpp  devwavelimiter.cpp  devwavelimiter.hpp  hwdebug.cpp  hwdebug.hpp
runtime/device/rocm/: CMakeLists.txt  mesa_glinterop.h  rocappprofile.cpp  rocappprofile.hpp  rocbinary.hpp  rocblit.cpp  rocblit.hpp  roccompiler.cpp  roccompilerlib.cpp  roccompilerlib.hpp  roccounters.cpp  roccounters.hpp  rocdefs.hpp  rocdevice.cpp  rocdevice.hpp  rocglinterop.cpp  rocglinterop.hpp  rochostcall.cpp  rochostcall.hpp  rockernel.cpp  rockernel.hpp  rocmemory.cpp  rocmemory.hpp  rocprintf.cpp  rocprintf.hpp  rocprogram.cpp  rocprogram.hpp  rocregisters.hpp  rocsched.hpp  rocschedcl.cpp  rocsettings.cpp  rocsettings.hpp  rocvirtual.cpp  rocvirtual.hpp
runtime/include/: vdi_agent_amd.h  vdi_common.hpp
runtime/os/: alloc.cpp  alloc.hpp  os.cpp  os.hpp  os_posix.cpp  os_win32.cpp  setjmp.S  setjmp.asm
runtime/platform/: activity.cpp  activity.hpp  agent.cpp  agent.hpp  command.cpp  command.hpp  commandqueue.cpp  commandqueue.hpp  context.cpp  context.hpp  counter.hpp  interop.hpp  kernel.cpp  kernel.hpp  memory.cpp  memory.hpp  ndrange.cpp  ndrange.hpp  object.cpp  object.hpp  perfctr.hpp  prof_protocol.h  program.cpp  program.hpp  runtime.cpp  runtime.hpp  sampler.hpp  threadtrace.hpp
runtime/thread/: atomic.hpp  monitor.cpp  monitor.hpp  semaphore.cpp  semaphore.hpp  thread.cpp  thread.hpp
runtime/utils/: concurrent.hpp  debug.cpp  debug.hpp  flags.cpp  flags.hpp  macros.hpp  util.hpp  versions.hpp
tests/ocltst/: CMakeLists.txt
tests/ocltst/env/: CMakeLists.txt  Module.h  ResultStruct.h  ServiceCode.cpp  Timer.cpp  Timer.h  Worker.h  getopt.cpp  getopt.h  oclTestLog.cpp  oclTestLog.h  oclsysinfo.cpp  oclsysinfo.h  ocltst.cpp  pfm.cpp  pfm.h  window.cpp  window.h
tests/ocltst/include/: OCLLog.h  OCLTest.h  OCLTestList.h  OCLTestUtils.h  OCLWrapper.h
tests/ocltst/include/OCL/: Thread.h
tests/ocltst/log/: CMakeLists.txt  oclTestLog.cpp  oclTestLog.h
tests/ocltst/module/common/: BaseTestImp.cpp  CMakeLists.txt  OCLGLCommon.cpp  OCLGLCommon.h  OCLGLCommonLinux.cpp  OCLGLCommonWindows.cpp  OCLTestImp.cpp  OCLTestListImp.cpp  OCLTestUtils.cpp  OCLThread.cpp  OCLWrapper.cpp  Timer.cpp  Timer.h
tests/ocltst/module/dx/: OCLDX11Common.cpp  OCLDX11Common.h  OCLDX11YUY2.cpp  OCLDX11YUY2.h  TestList.cpp
tests/ocltst/module/gl/: CMakeLists.txt  OCLGLBuffer.cpp  OCLGLBuffer.h  OCLGLBufferMultipleQueues.cpp  OCLGLBufferMultipleQueues.h  OCLGLDepthBuffer.cpp  OCLGLDepthBuffer.h  OCLGLDepthTex.cpp  OCLGLDepthTex.h  OCLGLFenceSync.cpp  OCLGLFenceSync.h  OCLGLMsaaTexture.cpp  OCLGLMsaaTexture.h  OCLGLMultiContext.cpp  OCLGLMultiContext.h  OCLGLPerfSepia.cpp  OCLGLPerfSepia.h  OCLGLTexture.cpp  OCLGLTexture.h  TestList.cpp  oclgl.exclude
tests/ocltst/module/include/: BaseTestImp.h  OCLTestImp.h  OCLTestListImp.h  OclIncludes.h
tests/ocltst/module/perf/: CMakeLists.txt  OCLPerf3DImageWriteSpeed.cpp  OCLPerf3DImageWriteSpeed.h  OCLPerfAES256.cpp  OCLPerfAES256.h  OCLPerfAtomicSpeed.cpp  OCLPerfAtomicSpeed.h  OCLPerfAtomicSpeed20.cpp  OCLPerfAtomicSpeed20.h  OCLPerfAtomicSpeed20Kernels.h  OCLPerfAtomicSpeedKernels.h  OCLPerfBufferCopyOverhead.cpp  OCLPerfBufferCopyOverhead.h  OCLPerfBufferCopySpeed.cpp  OCLPerfBufferCopySpeed.h  OCLPerfBufferReadSpeed.cpp  OCLPerfBufferReadSpeed.h  OCLPerfBufferWriteSpeed.cpp  OCLPerfBufferWriteSpeed.h  OCLPerfCPUMemSpeed.cpp  OCLPerfCPUMemSpeed.h  OCLPerfCommandQueue.cpp  OCLPerfCommandQueue.h  OCLPerfConcurrency.cpp  OCLPerfConcurrency.h  OCLPerfDevMemReadSpeed.cpp  OCLPerfDevMemReadSpeed.h  OCLPerfDevMemWriteSpeed.cpp  OCLPerfDevMemWriteSpeed.h  OCLPerfDeviceConcurrency.cpp  OCLPerfDeviceConcurrency.h  OCLPerfDeviceEnqueue.cpp  OCLPerfDeviceEnqueue.h  OCLPerfDeviceEnqueue2.cpp  OCLPerfDeviceEnqueue2.h  OCLPerfDeviceEnqueueEvent.cpp  OCLPerfDeviceEnqueueEvent.h  OCLPerfDeviceEnqueueSier.cpp  OCLPerfDeviceEnqueueSier.h  OCLPerfDispatchSpeed.cpp  (+105 more)
tools/clinfo/: CMakeLists.txt  cl.hpp  clinfo.cpp
tools/cltrace/: CMakeLists.txt  cltrace.cpp  cltrace.def  cltrace.map
(+271 files in other folders)
